--- a/food-delivery/index.html
+++ b/food-delivery/index.html
@@ -21,6 +21,19 @@
             <button class="complete-order-btn">Complete order</button>
         </aside>
     </section>
+    <section class="options-section">
+        <div class="option">
+            <div class="option-item">
+            <h1>Grill</h1>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempore, ipsa laborum</p>
+            </div>
+        <div>
+            <span class=""></span>
+            <button class="">+</button>
+
+        </div>
+        </div>
+    </section>
     
 	<script src="index.js" type="module"></script>
     </body>
