erro no option checkbox resolvido

--- a/food-delivery/index.html
+++ b/food-delivery/index.html
@@ -43,7 +43,7 @@
                     <span class="quantity">0</span>
                     <button class="sum-btn">+</button>
                 </div>
-                <button class="add-option-btn">Add <span class="total-option-price"></span>$20</button>
+                <button class="add-option-btn">Add <span class="total-option-price"></span></button>
             </div>
         </aside>
     </section>
