falta adicionar pagina para finalizar compra

--- a/food-delivery/index.html
+++ b/food-delivery/index.html
@@ -21,9 +21,10 @@
     </header>
     
     <section class="menu-container"> 
-        <div class="menu"></div>   
-        <aside class="finish-order-container">
-            <button class="finish-order-btn red-btn">loemlorem</button>
+        <div class="menu"></div> 
+        <div class="finish-order-container"></div>
+        <aside class="finish-order-aside">
+            <button class="finish-order-btn red-btn"></button>
         </aside>
     </section>
 
