--- a/Color Scheme Generator/index.html
+++ b/Color Scheme Generator/index.html
@@ -14,7 +14,7 @@
     </head>
     <body>
         <main>
-            <article data-text="gggg">
+            <article data-text="">
                 <section class="section-header">
                     <form class="flex">
                     <input class="seed-color" type="color" name="colors">
