--- a/Color Scheme Generator/index.html
+++ b/Color Scheme Generator/index.html
@@ -7,10 +7,15 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Ubuntu+Condensed&display=swap" rel="stylesheet">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Cookie&display=swap" rel="stylesheet"> 
+        <link rel="shortcut icon" href="images/color-icon.png" type="image/x-icon">  
+        <!--Icon by <a href="https://freeicons.io/profile/9025">Sorasak Pinwiset</a> on <a href="https://freeicons.io">freeicons.io</a>-->               
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Document</title>
+        <title>Color Scheme Generator</title>
     </head>
     <body>
         <main>
