--- a/Color Scheme Generator/index.html
+++ b/Color Scheme Generator/index.html
@@ -24,18 +24,18 @@
                     <form class="flex">
                     <input class="seed-color" type="color" name="colors">
                     <select class="options-container">  
-                        <!--OPTIONS IN JS FILE-->
+                        <!--OPTIONS EM ARQUIVO JS-->
                     </select>
                     </form>
                     <button  class="random-btn">Get random color</button>
                     </section>
                         
                 <section class="section-scheme-colors">
-                   <!--SCHEME COLORS IN JS FILE-->
+                   <!--SCHEME COLORS EM ARQUIVO JS-->
                     </div>
                 </section>
             </article>
         </main>
-        <script src="index.js"></script>
+        <script src="index.js" type="module"></script>
     </body>
 </html>
