--- a/Tindog/index.html
+++ b/Tindog/index.html
@@ -30,8 +30,8 @@
                     <p>How you doin?</p>
                 </div>-->
                <div class="btns-container">
-                    <button class="like-btn"><img src="images/icon-heart.png" alt="like"></button>
-                    <button class="pass-btn"><img src="images/icon-cross.png" alt="pass"></button>
+                    <button class="like-btn"><img src="images/icon-heart.png" alt="like" class="like-img"></button>
+                    <button class="pass-btn"><img src="images/icon-cross.png" alt="pass" class="pass-img"></button>
                 </div>
             </section>
         
