settings icon adicionado e distance adicionado a data e aos perfis

--- a/Tindog/index.html
+++ b/Tindog/index.html
@@ -15,7 +15,7 @@
         <header>
             <nav>
                 <ul class="flex">
-                <li><img src="images/icon-profile.png" alt="profile settings"></li>
+                <li><img src="images/icons8-settings-60.png" alt="profile settings" class="settings-icon"></li>
                 <li><img src="images/logo.png" alt="logo" class="logo-img"></li>
                 <li><img src="images/icon-chat.png" alt="chats"></li>
                 </ul>
@@ -35,3 +35,4 @@
    <script src="index.js" type="module"></script> 
 </body>
 </html>
+<!--Settings icon by Icons8-->
