mudei o nome de algumas variáveis

--- a/Tindog/index.html
+++ b/Tindog/index.html
@@ -8,12 +8,14 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;1,500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <link rel="shortcut icon" href="images/icons8-cópia-da-pata-do-cão-48.png" type="image/x-icon">
+    <title>Tindog</title>
 </head>
 <body>
     <main>
         <header>
             <nav>
+              
                 <ul class="flex">
                 <li><img src="images/icons8-settings-60.png" alt="profile settings" class="settings-icon"></li>
                 <li><img src="images/logo.png" alt="logo" class="logo-img"></li>
@@ -36,3 +38,4 @@
 </body>
 </html>
 <!--Settings icon by Icons8-->
+<!--<div>Icons made by <a href="https://www.freepik.com" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div>-->
