falta adicionar perfis de fundo

--- a/Tindog/index.html
+++ b/Tindog/index.html
@@ -24,7 +24,9 @@
             </nav>
         </header>
         <article>
+            <div class="next-profiles"></div>
             <section class="profiles-section flex">
+               
                 <section class="profiles flex"></section>
                <div class="btns-container">
                     <button class="like-btn"><img src="images/icon-heart.png" alt="like" class="like-img"></button>
