passwword generator - ui melhorado e input adicionado

--- a/Password Generator/index.html
+++ b/Password Generator/index.html
@@ -14,16 +14,17 @@
             <h1>Generate a <span>random password</span></h1>
             <h2>Never use an insecure password again</h2>
         <div class="setUp-container">
-            <div class="inputDiv"><input type="text" placeholder="How many digits" autocomplete="off"></div>
+            <div class="inputDiv" id="div-password" ><input type="number" placeholder="How many passwords" autocomplete="off" class="passwords-quantity-input" ></div>
+            <div class="inputDiv" id="div-digit"><input type="number" placeholder="Digits" autocomplete="off" class="digits-quantity-input" ></div>
             <button class="generateBtn">Generate passwords</button>
         </div>
         <div class="password-container">
-            <div class="passwords">
-                <div class="password"></div>
-                <div class="password"></div>
+            
+              <!--  <div class="password"></div>
+                <div class="password"></div>-->
             </div>
         </div>
-        </div>
+      
         <script src="index.js"></script>
     </body>
 </html>
