--- a/Travel Journal/travel journal/index.html
+++ b/Travel Journal/travel journal/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;300;400;600" rel="stylesheet"> 
-    <title>Vite + React</title>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;500;700;800;900&display=swap" rel="stylesheet">
+    <title>My travel Journal</title>
   </head>
   <body>
     <div id="root"></div>
