color scheme generator: skeleton adicionado

--- a/Color Scheme Generator/index.html
+++ b/Color Scheme Generator/index.html
@@ -8,8 +8,8 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Ubuntu+Condensed&display=swap" rel="stylesheet">
         <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Cookie&display=swap" rel="stylesheet"> 
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Cookie&display=swap" rel="stylesheet"> 
         <link rel="shortcut icon" href="images/color-icon.png" type="image/x-icon">  
         <!--Icon by <a href="https://freeicons.io/profile/9025">Sorasak Pinwiset</a> on <a href="https://freeicons.io">freeicons.io</a>-->               
         <meta charset="UTF-8">
@@ -19,7 +19,7 @@
     </head>
     <body>
         <main>
-            <article data-text="">
+            <article class="container">
                 <section class="section-header">
                     <form class="flex">
                     <input class="seed-color" type="color" name="colors">
